# boost-process

./: .travis.yml
doc/: design.qbk  faq.qbk  introduction.qbk  tutorial.qbk
example/: CMakeLists.txt  intro.cpp
include/boost/: process.hpp
include/boost/process/: async_pipe.hpp  async_system.hpp  environment.hpp  io.hpp  locale.hpp  pipe.hpp
include/boost/process/detail/: child_decl.hpp  config.hpp  execute_impl.hpp
include/boost/process/detail/posix/: async_in.hpp  async_out.hpp  async_pipe.hpp  basic_pipe.hpp  executor.hpp  file_descriptor.hpp  io_context_ref.hpp  is_running.hpp  signal.hpp  start_dir.hpp  wait_for_exit.hpp  wait_group.hpp
include/boost/process/detail/windows/: async_pipe.hpp  basic_pipe.hpp  environment.hpp  executor.hpp  io_context_ref.hpp  job_workaround.hpp  locale.hpp  start_dir.hpp
test/: Jamfile.jam  async_pipe.cpp  bind_stdin.cpp  echo_named_pipe.cpp  exit_code.cpp  extensions.cpp  group_wait.cpp  posix_specific.cpp  sparring_partner.cpp  windows_specific.cpp
